# star-vector

./: .gitignore  pyproject.toml
expts/: pg_outs  svgs2pgt.py  test.py  train_lora.py
expts/inputs2/: Label.txt
expts/nano/: i2s_nano.yaml  peft_lora.sh  test.nano.parquet  train.nano.parquet  train_lora.py
scripts/: quickstart-hf.py
starvector/: clip_model.py  image_encoder.py  util.py
starvector/data/: dataset.py  emojisvg.py  figrsvg.py  fontsvg.py  iconsvg.py  nanosvg.py  stacksvg.py  util.py
starvector/metrics/: compute_clip_score.py  compute_dino_score.py  compute_fid.py  compute_l2.py  count_token_length.py  metrics.py
starvector/model/: starvector_arch.py
starvector/model/image_encoder/: image_encoder.py
starvector/model/models/: starvector_v1.py  starvector_v2.py
starvector/serve/: controller.py  gradio_demo_with_updated_gradio.py  gradio_web_server.py  util.py
starvector/serve/vllm_api_gradio/: controller.py  gradio_web_server.py  model_worker.py
starvector/train/: peft_lora.py  train.py  util.py  zero_to_fp32.py
starvector/validation/: starvector_hf_validator.py  starvector_vllm_api_svg_validator.py  starvector_vllm_svg_validator.py  validate.py
